appointment module pending tab plus changes as per discussion with jam

--- a/WebApp/Views/Appointment/Index.cshtml
+++ b/WebApp/Views/Appointment/Index.cshtml
@@ -41,11 +41,15 @@
     <div class="" role="tabpanel" data-example-id="togglable-tabs" style="padding-bottom: 180px;">
         <ul id="myTab" class="nav nav-tabs bar_tabs m-b-40" role="tablist">
             <li role="presentation" class="active">
-                <a href="#call_history" id="doctor" role="tab" data-toggle="tab" aria-expanded="true">Upcoming</a>
+                <a href="#call_history" id="doctor" role="tab" data-toggle="tab" aria-expanded="true" onclick="setTab('U')">Upcoming</a>
             </li>
             <li role="presentation" class="">
-                <a href="#find_doctor" role="tab" id="history" data-toggle="tab" aria-expanded="false">Reschedule</a>
+                <a href="#find_doctor" role="tab" id="history" data-toggle="tab" aria-expanded="false" onclick="setTab('R')">Reschedule</a>
             </li>
+            <li role="presentation" class="">
+                <a href="#pending" role="tab" id="history" data-toggle="tab" aria-expanded="false" onclick="setTab('P')">Pending</a>
+            </li>
+
            
         </ul>
         <div id="myTabContent" class="tab-content">
@@ -81,11 +85,28 @@
                     </div>
                 </div>
             </div>
+            <div role="tabpanel" class="tab-pane fade" id="pending" aria-labelledby="pending">
+                <div class="x_panel">
+
+
+                    <div class="x_content">
+                        <div id="divPending" class="table-responsive">
+
+                            @{
+                                Html.RenderAction("PartialPending", "Appointment");
+                            }
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
             </div>
     <input type="text" style="display:none" id="pvappid" value="0">
+    <input type="text" style="display:none" id="pvcid" value="0">
     <div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel4">
         <div class="modal-dialog" role="document" style="width: 350px;">
             <div id='myModalContent' class="modal-content" style="border-radius: 0;">
@@ -140,17 +161,72 @@
 
  <!-- Load View App Detail Popup -->
 <script>
-
+    var currentTab = "";
+   
     var fetchDate="";
     var _objAppointment = {};
     var _doctorName="";
     var _doctorID="";
-    var appdate="";
+    var appdate = "";
+    $(document).ready(function () {
+        currentTab = "U";
+       
+    });
+    function setTab(cTab) {
+        currentTab = cTab;
+       
+    }
+
+
     function sendVariables(appDate,doctorid, editappid,elem) {
 
         _doctorID=doctorid;
         _doctorName= $(elem).data('assigned-id');
         showDoctorTimings(doctorid,editappid,appDate);
+    }
+
+    function completeConsult(editappid,cid) {
+      
+               //showLoader();
+                var objCRR = {};
+                
+                objCRR["userID"] = '@SessionHandler.UserInfo.userId';
+                objCRR["appID"] = editappid;
+                $.ajax({
+                    url: '@Url.Action("CompleteApp", "Appointment")',
+                    type: "POST",
+                    data: objCRR,
+                    dataType: 'json',
+                    success: function (result) {
+                        
+                        //Reload container
+                        if (result.Message != undefined) {
+                           
+                            new PNotify({ title: 'Error', text: "Consultation "+" "+result.Message, type: 'error', styling: 'bootstrap3' });
+                            $('#myModal4').modal('hide');
+                            //stopLoader();
+                        }
+                        else {
+                            new PNotify({ title: 'Success', text: "Consultation is marked as completed successfully.", type: 'success', styling: 'bootstrap3' });
+                            $('#myModal4').modal('hide');
+                           
+                            reloadContainer(function () {
+
+                                
+                                //Stop displaying loader
+                                //stopLoader();
+                            });
+                        }
+
+                    },
+                    error: function (err) {
+                        //alert(err.statusText);
+                        new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
+                        //Stop displaying loader
+                        //stopLoader();
+                    }
+                });
+
     }
 
     $(function () {
@@ -184,15 +260,53 @@
 
 
     });
+    $(function () {
+        $(".pendingviewdetail").click(function () {
+            alert($("#pvcid").val());
+            //debugger;
+            var $buttonClicked = $(this);
+            var AppDetailPostBackURL = '/Appointment/ViewAppDetails';
+            var docid = $buttonClicked.attr('data-id');
+            var appID = $buttonClicked.attr('id');
+            //$('#myModalContent').html(data);
+            //$('#myModal4').modal('show');
+            //$("#myModalContent").load('@Url.Action("ViewAppDetails", "Appointment")', function () {
+            //callback();
+            //});
+            //$('#myModal4').modal('show');
+            
+            reloadModelContainer(function ()
+            {
+                var $modal = $('#myModal4');
+                $editappid = $modal.find('#editappid');
+                $doctorid = $modal.find('#doctorid');
+                $editappid.val(appID);
+                $doctorid.val(docid);
+                if($("#pvcid").val()!=0)
+                {
+                    $cc = $modal.find('#cc');
+                    $cc.show();
+                }
+                
+                //Stop displaying loader
+                //stopLoader();
 
+            });
+            
+        });
+
+
+    });
 
     //Reschedule App
 
     function rescheduleApp(appID)
     {
 
-        _objAppointment["appID"] =  $("#RAppID").val();
-        _objAppointment["patientID"] = @SessionHandler.UserInfo.Id;
+        _objAppointment["appID"] = $("#RAppID").val();
+        _objAppointment["appType"] = currentTab;
+        
+        _objAppointment["userID"] = '@SessionHandler.UserInfo.userId';
         $.ajax({
             url: '@Url.Action("RescheduleApp", "Appointment")',
             type: "POST",
@@ -247,7 +361,7 @@
         //debugger;
         var $buttonClicked = $(this);
         appdate = $buttonClicked.attr('data-id');
-
+        //alert($('#fetchdate').val());
     });
     $("#myModal1").on('show.bs.modal', function (e) {
         var $modal = $(this);
@@ -281,7 +395,7 @@
     });
     $('#fetchdate').on('apply.daterangepicker', function (ev, picker) {
         //do something, like clearing an input
-        //alert($('#fetchdate').val());
+        
         fetchTimings( $('#fetchdate').val());
 
     });
@@ -327,7 +441,7 @@
     }
 
     function showDoctorTimings(doctorID,appID,appDate) {
-        //alert(appDate);
+        
         var cappDate = appDate.split("/");
         var f = new Date(cappDate[2], cappDate[1] - 1, cappDate[0]);
         $("#RAppID").val(appID);
@@ -350,6 +464,15 @@
 
         _objSearch["appDate"] = appDate;
         $('#fetchdate').val(appDate);
+        debugger;
+        //var d1 = new Date(appDate.ToString());
+        //var d2 = new Date(today.ToString());
+        //alert(new Date(today) > new Date(appDate));
+        if (new Date(today) > new Date(appDate))
+        {
+            //alert('previous date app reschedule');
+            $('#fetchdate').val(today);
+        }
         _objSearch["doctorID"] = doctorID;
 
         var div = "";
@@ -405,6 +528,9 @@
             callback();
         });
         $("#divUpcoming").load('@Url.Action("PartialUpcoming", "Appointment")', function () {
+            callback();
+        });
+        $("#divPending").load('@Url.Action("PartialPending", "Appointment")', function () {
             callback();
         });
 
