--- a/WebApp/Views/DoctorAppointment/PartialDoctorViewAppDetail.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorViewAppDetail.cshtml
@@ -110,6 +110,7 @@
                     <div class="m-t-10">
                         <button id="ueditappointment" onclick=usendVariables($("#doctorid").val(),$("#editappid").val(),this) style="width: 100%; border-radius: 0; padding: 15px 5px; font-size: 20px; display:none" type="button" class="btn btn-primary">Reschedule Request</button>
                         <button id="reditappointment" onclick=rsendVariables($("#doctorid").val(),$("#editappid").val(),this) style="width: 100%; border-radius: 0; padding: 15px 5px; font-size: 20px; display:none" type="button" class="btn btn-primary">Cancel Reschedule</button>
+                        <button id="ceditappointment" onclick=csendVariables($("#doctorid").val(),$("#editappid").val(),this) style="width: 100%; border-radius: 0; padding: 15px 5px; font-size: 20px; display:none" type="button" class="btn btn-primary">Complete Consult</button>
                         <input type="text" style="display:none" id="editappid">
                         <input type="text" style="display:none" id="doctorid">
                         @*<button style="width: 100%; border-radius: 0; background: #2AAC39; color: #fff; padding: 15px 5px; font-size: 20px;" class="btn" type="button">ACCEPT</button>
