--- a/WebApp/Views/Appointment/PartialUpcoming.cshtml
+++ b/WebApp/Views/Appointment/PartialUpcoming.cshtml
@@ -51,7 +51,7 @@ else
                                        ,"cellPhone":"@item.cellphone"}'>View Detail</a></li>*@
                                 <li><a href="#" data-toggle="modal" class="thumbnail-col-inner" data-id="@item.doctorID" id="@item.appID" data-target="#myModal4" onclick=$("#pvappid").val(@item.appID);>View Detail</a></li>
                                 <li><a href="#" class="reschedule" data-id="@item.appDate" data-toggle="modal" data-target="#myModal1"  data-todo='{"docid":"@item.doctorID","doctorName":"@item.DoctorName","appID":"@item.appID","appDate":"@item.appDate"}' onclick=showDoctorTimings(@item.doctorID,@item.appID,'@item.appDate') id="@item.doctorID">Reschedule App</a></li>
-
+                                <li><input type="text" style="display:none" id="apptype" value="U"></li>
 </ul>
                         </div>
                     </td>
