--- a/WebApp/Views/DoctorAppointment/PartialDoctorPending.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorPending.cshtml
@@ -1,5 +1,5 @@
 ﻿@using WebApp.Helper
-@model IEnumerable<DataAccess.CustomModels.RescheduleAppModel>
+@model IEnumerable<DataAccess.CustomModels.ReschedulePendingAppModel>
 @{
     Layout = null;
 }
@@ -10,7 +10,7 @@
     <div class="well">
         There is no upcoming appointment.
     </div>
-   
+
 }
 else
 {
@@ -30,9 +30,14 @@ else
             @if (Model != null)
             {
                 var j = 1;
+                var consultId = 0;
                 foreach (var item in Model)
                 {
-
+                    consultId = 0;
+                    if (item.consultID != null)
+                    {
+                        consultId = Convert.ToInt32(item.consultID);
+                    }
                     <tr class="even pointer">
                         <td>@item.PatientName</td>
                         <td>@item.appDate @item.appTime</td>
@@ -47,8 +52,10 @@ else
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-right">
                                     <li><a href="#" data-toggle="modal" class="thumbnail-col-inner" data-id="@item.appID" id="@item.doctorID" data-target="#myModal5" onclick=$("#pvappid").val(@item.appID);>View Detail</a></li>
-                                  
-                                    <li><a href="#" class="reschedule" data-id="@item.doctorID" id="@item.appID">Reschedule Req</a></li>
+
+                                    <li><a href="#" class="preschedule" data-id="@item.doctorID" id="@item.appID">Reschedule Req</a></li>
+                                    <li><a href="#" onclick="callConsult(@consultId,@item.appID)">Complete Consult</a></li>
+                                    <li><input type="text" style="display:none" id="consultid" value="@consultId"></li>
 
                                 </ul>
                             </div>
@@ -144,16 +151,99 @@ else
 <!-- /Datatables -->
 
 <script>
+
     function setTab(cTab) {
         currentTab = cTab;
 
     }
-    function usendVariables(doctorid, editappid, elem) {
+    function callConsult(consultID,appID)
+    {
+        var objCRR={};
+
+        if(consultID==0)
+        {
+            alert('Consultation not found for this appointment.');
+            return;
+        }
+        objCRR["userID"] = '@SessionHandler.UserInfo.userId.ToString()';
+        objCRR["appID"] = appID;
+        $.ajax({
+            url: '@Url.Action("CompleteApp", "Appointment")',
+            type: "POST",
+            data: objCRR,
+            dataType: 'json',
+            success: function (result) {
+
+                //Reload container
+                if (result.Message != undefined) {
+                    //alert(result.Message.ReasonPhrase);
+                    new PNotify({ title: 'Error', text: "Consultation "+" "+result.Message, type: 'error', styling: 'bootstrap3' });
+                    //stopLoader();
+                }
+                else {
+                    new PNotify({ title: 'Success', text: "Consultation is marked as completed successfully.", type: 'success', styling: 'bootstrap3' });
+                    //alert('Consultation is marked as completed successfully.');
+                    reloadContainer(function () {
+
+
+                        //Stop displaying loader
+                        //stopLoader();
+                    });
+                }
+
+            },
+            error: function (err) {
+                //alert(err.statusText);
+                new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
+                //Stop displaying loader
+                //stopLoader();
+            }
+        });
+    }
+    function csendVariables(doctorid, editappid, elem) {
         var objCRR = {};
         //objCRR["doctorID"] = doctorid;
         objCRR["appID"] = editappid;
         objCRR["appType"] = currentTab;
         objCRR["userID"] = '@SessionHandler.UserInfo.userId';
+        $.ajax({
+                url: '@Url.Action("CompleteApp", "DoctorAppointment")',
+                type: "POST",
+                data: objCRR,
+                dataType: 'json',
+                success: function (result) {
+                    //Reload container
+                    if (result.Message != undefined) {
+                        alert(result.Message.ReasonPhrase);
+                        $('#myModal5').modal('hide');
+                        //new PNotify({ title: 'Error', text: result.Message.ReasonPhrase, type: 'error', styling: 'bootstrap3' });
+                        //stopLoader();
+                    }
+                    else {
+                        alert('Consultation is marked as completed successfully.');
+                        $('#myModal5').modal('hide');
+                        reloadContainer(function () {
+
+                            // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
+                            //Stop displaying loader
+                            //stopLoader();
+                        });
+                    }
+
+                },
+                error: function (err) {
+                    alert(err.statusText);
+                    $('#myModal5').modal('hide');
+                    //new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
+                    //Stop displaying loader
+                    //stopLoader();
+                }
+            });
+    }
+    function usendVariables(doctorid, editappid, elem) {
+        var objCRR = {};
+        objCRR["userID"] = '@SessionHandler.UserInfo.userId.ToString()';
+        objCRR["appID"] = editappid;
         $.ajax({
             url: '@Url.Action("Reschedule", "DoctorAppointment")',
             type: "POST",
@@ -170,7 +260,7 @@ else
                     alert('Appointment is rescheduled successfully.');
                     $('#myModal5').modal('hide');
                     reloadContainer(function () {
-                       
+
                         // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
                         //Stop displaying loader
                         //stopLoader();
@@ -188,17 +278,19 @@ else
         });
     }
     $(function () {
-        $(".reschedule").click(function () {
-
+        $(".preschedule").click(function () {
+           
             //showLoader();
             var objCRR = {};
-
+            
             var $buttonClicked = $(this);
             //var AppDetailPostBackURL = '/DoctorAppointment/CancelReschedule';
             var appID = $buttonClicked.attr('id');
             var doctorID = $buttonClicked.attr('data-id');
-            objCRR["doctorID"] = doctorID;
+            objCRR["userID"] = '@SessionHandler.UserInfo.userId.ToString()';
             objCRR["appID"] = appID;
+            objCRR["appType"] = currentTab;
+            
             $.ajax({
                 url: '@Url.Action("Reschedule", "DoctorAppointment")',
                 type: "POST",
@@ -214,7 +306,7 @@ else
                     else {
                         alert('Appointment is rescheduled successfully.');
                         reloadContainer(function () {
-                         
+
                             // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
                             //Stop displaying loader
                             //stopLoader();
@@ -236,7 +328,61 @@ else
         //    $('#myModal4').modal('hide');
         //});
     });
-    </script>
+
+    $(function () {
+        $(".complete").click(function () {
+            if (consultID == null) {
+                alert('Consultation not found for this appointment.');
+                return false;
+            }
+
+            //showLoader();
+            var objCRR = {};
+
+            var $buttonClicked = $(this);
+            //var AppDetailPostBackURL = '/DoctorAppointment/CancelReschedule';
+            var appID = $buttonClicked.attr('id');
+            var consultID = $buttonClicked.attr('data-id');
+            objCRR["userID"] = '@SessionHandler.UserInfo.userId.ToString()';
+            objCRR["appID"] = appID;
+            $.ajax({
+                url: '@Url.Action("CompleteApp", "DoctorAppointment")',
+                type: "POST",
+                data: objCRR,
+                dataType: 'json',
+                success: function (result) {
+                    //Reload container
+                    if (result.Message != undefined) {
+                        alert(result.Message.ReasonPhrase);
+                        //new PNotify({ title: 'Error', text: result.Message.ReasonPhrase, type: 'error', styling: 'bootstrap3' });
+                        //stopLoader();
+                    }
+                    else {
+                        alert('Consultation is marked as completed successfully.');
+                        reloadContainer(function () {
+
+                            // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
+                            //Stop displaying loader
+                            //stopLoader();
+                        });
+                    }
+
+                },
+                error: function (err) {
+                    alert(err.statusText);
+                    //new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
+                    //Stop displaying loader
+                    //stopLoader();
+                }
+            });
+
+        });
+
+        //$("#closbtn").click(function () {
+        //    $('#myModal4').modal('hide');
+        //});
+    });
+</script>
 
 <script>
     $(function () {
@@ -256,6 +402,11 @@ else
                 $ueditappointment.hide();
                 $editappid.val(id);
                 $doctorid.val(docid);
+                if ($("#consultid").val() != 0) {
+                    $ceditappointment = $modal.find('#ceditappointment');
+                    $ceditappointment.show();
+                }
+                
                 $reditappointment = $modal.find('#reditappointment');
                 $ueditappointment = $modal.find('#ueditappointment');
                 $ueditappointment.show();
@@ -307,4 +458,3 @@ else
 
     }
 </script>
-
