appointment module pending tab

--- a/WebApp/Views/Appointment/Index.cshtml
+++ b/WebApp/Views/Appointment/Index.cshtml
@@ -47,7 +47,7 @@
                 <a href="#find_doctor" role="tab" id="history" data-toggle="tab" aria-expanded="false" onclick="setTab('R')">Reschedule</a>
             </li>
             <li role="presentation" class="">
-                <a href="#pending" role="tab" id="history" data-toggle="tab" aria-expanded="false" onclick="setTab('P')">Pending</a>
+                <a href="#pending_doctor" role="tab" id="ppending_doctor" data-toggle="tab" aria-expanded="false" onclick="setTab('P')">Pending</a>
             </li>
 
            
@@ -85,7 +85,7 @@
                     </div>
                 </div>
             </div>
-            <div role="tabpanel" class="tab-pane fade" id="pending" aria-labelledby="pending">
+            <div role="tabpanel" class="tab-pane fade" id="pending_doctor" aria-labelledby="pending_doctor">
                 <div class="x_panel">
 
 
