--- a/WebApp/Views/Appointment/PartialUpcoming.cshtml
+++ b/WebApp/Views/Appointment/PartialUpcoming.cshtml
@@ -128,13 +128,13 @@ else
 
         var $datatable = $('#datatable-checkbox');
 
-        $datatable.dataTable({
-          'order': [[ 2, 'asc' ]],
-          'columnDefs': [
-            { orderable: false, targets: [0] },
+        //$datatable.dataTable({
+        //  'order': [[ 2, 'asc' ]],
+        //  'columnDefs': [
+        //    { orderable: false, targets: [0] },
              
-          ]
-        });
+        //  ]
+        //});
         $datatable.on('draw.dt', function() {
           $('input').iCheck({
             checkboxClass: 'icheckbox_flat-green'
