--- a/WebApp/Views/Consultation/PartialViewConsultation.cshtml
+++ b/WebApp/Views/Consultation/PartialViewConsultation.cshtml
@@ -9,7 +9,7 @@
    else
    {
 
-    <table id="datatable-responsive" class="table table-striped table-bordered" cellspacing="0" width="100%">
+    <table id="datatableconsultation" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <tr class="headings">
                 <th class="column-title">Doctor's Name </th>
@@ -38,16 +38,41 @@
                             }
                             else
                             {
-                               for (var i = 0; i < item.reviewStar; i++)
+                                if (item.reviewStar >= 3)
                                 {
-                                    <a href='javascript:void(0);'><span class='fa fa-star'></span></a>
+                                    for (var i = 0; i < item.reviewStar; i++)
+                                    {
+                                        <a href='javascript:void(0);'><span class='fa fa-star'></span></a>
+                                    }
+                                    for (var i = 0; i < 5 - item.reviewStar; i++)
+                                    {
+                                         <a href='javascript:void(0);'><span class='fa fa-star-o'></span></a>
+
+                                    }
                                 }
-                                for (var i = 0; i < 5-item.reviewStar; i++)
+                                else if (item.reviewStar < 3)
                                 {
-                                    <a href='javascript:void(0);'><span class='fa fa-star-o'></span></a>
+                                    if (item.reviewStatus == true)
+                                    {
+                                        for (var i = 0; i < item.reviewStar; i++)
+                                        {
+                                            <a href='javascript:void(0);'><span class='fa fa-star'></span></a>
+                                        }
+                                        for (var i = 0; i < 5 - item.reviewStar; i++)
+                                        {
+                                            <a href='javascript:void(0);'><span class='fa fa-star-o'></span></a>
+
+                                        }
+                                    }
+                                    else
+                                    {
+                                        <a href='javascript:void(0);'>Approval Pending</a>
+                                    }
                                 }
+
+
                             }
-                        </td>
+                            </td>
                         <td>@item.rov</td>
 
                         <td>
@@ -67,4 +92,80 @@
     </table>
 
    }
+<!-- Datatables -->
+<script>
+      $(document).ready(function() {
+        var handleDataTableButtons = function() {
+          if ($("#datatable-buttons").length) {
+            $("#datatable-buttons").DataTable({
+              dom: "Bfrtip",
+              buttons: [
+                {
+                  extend: "copy",
+                  className: "btn-sm"
+                },
+                {
+                  extend: "csv",
+                  className: "btn-sm"
+                },
+                {
+                  extend: "excel",
+                  className: "btn-sm"
+                },
+                {
+                  extend: "pdfHtml5",
+                  className: "btn-sm"
+                },
+                {
+                  extend: "print",
+                  className: "btn-sm"
+                },
+              ],
+              responsive: true
+            });
+          }
+        };
+
+        TableManageButtons = function() {
+          "use strict";
+          return {
+            init: function() {
+              handleDataTableButtons();
+            }
+          };
+        }();
+
+        $('#datatableconsultation').dataTable();
+
+        $('#datatable-keytable').DataTable({
+          keys: true
+        });
+
+        $('#datatable-responsive').DataTable();
+
+        $('#datatable-scroller').DataTable({
+          ajax: "js/datatables/json/scroller-demo.json",
+          deferRender: true,
+          scrollY: 380,
+          scrollCollapse: true,
+          scroller: true
+        });
+
+        $('#datatable-fixed-header').DataTable({
+          fixedHeader: true
+        });
+
+        var $datatable = $('#datatable-checkbox');
+
+
+        $datatable.on('draw.dt', function() {
+          $('input').iCheck({
+            checkboxClass: 'icheckbox_flat-green'
+          });
+        });
+
+        TableManageButtons.init();
+      });
+</script>
+<!-- /Datatables -->
 
