push to remove test alert message

--- a/WebApp/Views/Appointment/Index.cshtml
+++ b/WebApp/Views/Appointment/Index.cshtml
@@ -262,7 +262,7 @@
     });
     $(function () {
         $(".pendingviewdetail").click(function () {
-            alert($("#pvcid").val());
+            //alert($("#pvcid").val());
             //debugger;
             var $buttonClicked = $(this);
             var AppDetailPostBackURL = '/Appointment/ViewAppDetails';
