--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -90,7 +90,7 @@
 
     <ul id="messages"></ul>
     <div class="container body">
-        <div class="main_container">
+        <div class="main_container" style="background-color: #2a3f54;       position: absolute;">
             <div class="col-md-3 left_col">
                 <div class="left_col scroll-view">
                     <div class="navbar nav_title" style="border: 0;">
