--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -81,8 +81,8 @@
 
         <input type="button" id="sendmessage" value="Call to Doctor" />
     </div>
-    <div class="container body">
-        <div class="main_container">
+    <div class="container body" style="background-color: #2a3f54;       position: absolute;">
+        <div class="main_container" main_container>
             <div class="col-md-3 left_col">
                 <div class="left_col scroll-view">
                     <div class="navbar nav_title" style="border: 0;">
