--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -81,9 +81,9 @@
 
         <input type="button" id="sendmessage" value="Call to Doctor" />
     </div>
-    <div class="container body" style="background-color: #2a3f54;       position: absolute;">
+    <div class="container body" style="background-color: #2a3f54;">
         <div class="main_container" main_container>
-            <div class="col-md-3 left_col">
+            <div class="col-md-3 left_col menu_fixed">
                 <div class="left_col scroll-view">
                     <div class="navbar nav_title" style="border: 0;">
                         <a href="index.html" class="">
